[gd_scene load_steps=11 format=3 uid="uid://dovp08hjlj40l"]

[ext_resource type="Script" uid="uid://cadebp1ol0owu" path="res://scenes/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://nkns5slj3v3u" path="res://Topdown Assets/Images/background.jpeg" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://bgagfu5e1ecxd" path="res://Topdown Assets/Fonts/Bake Soda.otf" id="3_bqqt6"]
[ext_resource type="AudioStream" uid="uid://chy8yoko0y114" path="res://Topdown Assets/Sound/buttons.mp3" id="4_8ln24"]
[ext_resource type="AudioStream" uid="uid://vm7amrumnfm7" path="res://Topdown Assets/Sound/menu.mp3" id="5_rtw2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("1_l6cm7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.691357, 0.691357, 0.691357, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.662452, 0.662452, 0.662452, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.76662, 0.76662, 0.76662, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(0.834555, 0.638524, 0.286606, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -30.5
offset_right = 169.0
offset_bottom = 306.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Iniciar Juego	"

[node name="Button_Click_Sound" type="AudioStreamPlayer" parent="VBoxContainer/Button"]
stream = ExtResource("4_8ln24")
volume_db = -5.0
bus = &"SFX"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Salir"

[node name="Button_Click_Sound" type="AudioStreamPlayer" parent="VBoxContainer/Button2"]
stream = ExtResource("4_8ln24")
volume_db = -5.0
bus = &"SFX"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Opciones	"

[node name="Button_Click_Sound" type="AudioStreamPlayer" parent="VBoxContainer/Button3"]
stream = ExtResource("4_8ln24")
volume_db = -5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rtw2f")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_iniciar_juego_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_opciones_pressed"]
